--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-google-maps/api": "^2.18.1",
     "canvas-confetti": "1.6.0",
     "framer-motion": "^4.1.17",
+    "gh-pages": "^6.1.0",
     "google-map-react": "^2.2.0",
     "jsonwebtoken": "^9.0.0",
     "jwt-decode": "^3.1.2",
